# my-hls-plugin

./: .gitignore  README.md  cabal.project  haskell-language-server.cabal  test.hs
.github/workflows/: bench.yml  build.yml  caching.yml  flags.yml  hackage.yml  nix.yml  pre-commit.yml  test.yml
plugins/hls-magic-func-assistant-plugin/: hls-magic-func-assistant-plugin.cabal
plugins/hls-magic-func-assistant-plugin/src/Ide/Plugin/: MagicFuncAssistant.hs
src/: HlsPlugins.hs
