cabal-version:      2.2
name:               hls-magic-func-assistant-plugin
version:            0.0.0.3
synopsis:           magic func assistant plugin for Haskell Language Server
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
license:            Apache-2.0
license-file:       LICENSE
author:             Shota Takakura
maintainer:         bizyuness.takakura@gmail.com
category:           Development
build-type:         Simple
extra-source-files:
  LICENSE

source-repository head
    type:     git
    location: https://github.com/bizyutyu/my-plugin-hls.git

library
  buildable: True
  exposed-modules:    Ide.Plugin.MagicFuncAssistant
  hs-source-dirs:     src
  build-depends:
    , aeson
    , base                  >=4.12 && <5
    , containers
    , deepseq
    , ghc
    , ghcide                ^>=1.9
    , hls-graph
    , hls-plugin-api        ^>=1.6
    , lsp
    , text
    , unordered-containers
    , network <3.0
    , tostring
    , async
    , tagsoup
    , split
    , time

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    TypeOperators

test-suite tests
  buildable: True
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , filepath
    , hls-magic-func-assistant-plugin
    , hls-test-utils
    , text
    , network <3.0
    , tostring
    , async
    , tagsoup
    , split
    , time
